--- a/index.html
+++ b/index.html
@@ -5,24 +5,65 @@
     <meta charset="UTF-8">
     <title>Jogo Musical - Fase 1</title>
     <style>
-        body { font-family: Arial; background-color: #f0f8ff; margin: 0; padding: 0; }
+        body { font-family: Arial; margin: 0; background-color: #f0f8ff; overflow: hidden; }
         #game-container { position: relative; width: 100vw; height: 100vh; overflow: hidden; }
-        #staff { background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Music_staff_empty.svg/1024px-Music_staff_empty.svg.png') no-repeat center; background-size: contain; height: 60vh; margin-top: 5vh; }
-        .draggable { width: 60px; height: 60px; position: absolute; cursor: move; }
-        .note { border-radius: 50%; background-color: #ffcccb; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 24px; }
-        .clave { background-color: #add8e6; border-radius: 10px; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 24px; }
+        #staff {
+            position: absolute;
+            top: 15vh;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90vw;
+            height: 40vh;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/4/4f/Music_staff_empty.svg') no-repeat center;
+            background-size: contain;
+        }
+        .draggable {
+            width: 60px; height: 60px;
+            position: absolute;
+            cursor: grab;
+            touch-action: none;
+        }
+        .note {
+            border-radius: 50%;
+            background-color: #ffcccb;
+        }
+        .clave {
+            background-color: #add8e6;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            font-size: 20px;
+        }
+        .label {
+            position: absolute;
+            top: 65px;
+            left: 0;
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            display: none;
+        }
     </style>
 </head>
 <body>
     <div id="game-container">
         <div id="staff"></div>
-        <div id="claveSol" class="draggable clave" style="top: 10px; left: 10px;">Sol</div>
-        <div id="claveFa" class="draggable clave" style="top: 80px; left: 10px;">Fá</div>
-        <div id="claveDo" class="draggable clave" style="top: 150px; left: 10px;">Dó</div>
 
-        <div id="notaDo" class="draggable note" style="top: 10px; left: 100px;" onclick="playNote('C4')">Dó</div>
-        <div id="notaRe" class="draggable note" style="top: 80px; left: 100px;" onclick="playNote('D4')">Ré</div>
-        <div id="notaMi" class="draggable note" style="top: 150px; left: 100px;" onclick="playNote('E4')">Mi</div>
+        <div id="claveSol" class="draggable clave" style="top: 10px; left: 10px;">Sol</div>
+        <div id="claveFa" class="draggable clave" style="top: 90px; left: 10px;">Fá</div>
+        <div id="claveDo" class="draggable clave" style="top: 170px; left: 10px;">Dó</div>
+
+        <div id="notaDo" class="draggable note" style="top: 10px; left: 100px;" data-note="C4">
+            <div class="label">Dó</div>
+        </div>
+        <div id="notaRe" class="draggable note" style="top: 90px; left: 100px;" data-note="D4">
+            <div class="label">Ré</div>
+        </div>
+        <div id="notaMi" class="draggable note" style="top: 170px; left: 100px;" data-note="E4">
+            <div class="label">Mi</div>
+        </div>
     </div>
 
     <audio id="audioPlayer"></audio>
@@ -34,27 +75,33 @@
             'E4': 'https://cdn.pixabay.com/download/audio/2022/03/15/audio_aa4edc9c97.mp3?filename=note-e4-94502.mp3'
         };
 
+        const audio = document.getElementById('audioPlayer');
+
         function playNote(note) {
-            const audio = document.getElementById('audioPlayer');
-            audio.src = notes[note];
-            audio.play();
+            if (notes[note]) {
+                audio.src = notes[note];
+                audio.play();
+            }
         }
 
-        function dragElement(elmnt) {
+        function makeDraggable(elmnt) {
             let pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-            elmnt.onmousedown = dragMouseDown;
+            let isTouch = false;
 
             function dragMouseDown(e) {
-                e = e || window.event;
+                isTouch = e.type.startsWith("touch");
+                e = isTouch ? e.touches[0] : e;
                 e.preventDefault();
                 pos3 = e.clientX;
                 pos4 = e.clientY;
                 document.onmouseup = closeDragElement;
                 document.onmousemove = elementDrag;
+                document.ontouchend = closeDragElement;
+                document.ontouchmove = elementDrag;
             }
 
             function elementDrag(e) {
-                e = e || window.event;
+                e = isTouch ? e.touches[0] : e;
                 e.preventDefault();
                 pos1 = pos3 - e.clientX;
                 pos2 = pos4 - e.clientY;
@@ -67,10 +114,21 @@
             function closeDragElement() {
                 document.onmouseup = null;
                 document.onmousemove = null;
+                document.ontouchend = null;
+                document.ontouchmove = null;
+
+                const label = elmnt.querySelector('.label');
+                if (label) label.style.display = "block";
+
+                const noteName = elmnt.getAttribute("data-note");
+                if (noteName) playNote(noteName);
             }
+
+            elmnt.onmousedown = dragMouseDown;
+            elmnt.ontouchstart = dragMouseDown;
         }
 
-        document.querySelectorAll('.draggable').forEach(dragElement);
+        document.querySelectorAll('.draggable').forEach(makeDraggable);
     </script>
 </body>
 </html>
