--- a/index.html
+++ b/index.html
@@ -98,6 +98,49 @@
       margin-top: 5px;
       color: #888;
     }
+
+    @media (max-width: 600px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  nav button {
+    width: 90%;
+    max-width: 300px;
+    font-size: 1rem;
+  }
+
+  .map-container {
+    height: auto;
+    aspect-ratio: 9 / 16;
+    background-size: cover;
+  }
+
+  .fase {
+    font-size: 1.2rem;
+  }
+
+  .fase button {
+    width: 42px;
+    height: 42px;
+    font-size: 1.1rem;
+  }
+
+  .fase .cadeado {
+    font-size: 0.85rem;
+  }
+
+  section {
+    padding: 1rem;
+  }
+
+  th, td {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+}
+
   </style>
 <script>
   function openGamePopup() {
