--- a/fase5.html
+++ b/fase5.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fase 2 - Jogo Musical</title>
+  <title>Fase 5 – Claves e leitura musical</title>
   <style>
     body {
       font-family: 'Comic Sans MS', cursive;
@@ -55,7 +55,7 @@
 
   <script>
     let perguntas = [];
-    let fase = "Fase 5";
+    let fase = "Fase 5 – Claves e leitura musical";
     let index = 0;
     let acertos = 0;
 
