--- a/ranking.html
+++ b/ranking.html
@@ -34,6 +34,35 @@
     .icone {
       font-size: 1.5rem;
     }
+
+    @media (max-width: 600px) {
+  table, thead, tbody, th, td, tr {
+    display: block;
+    text-align: left;
+  }
+  thead {
+    display: none;
+  }
+  tr {
+    margin-bottom: 1rem;
+    background: #fffbe6;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 1rem;
+  }
+  td {
+    border: none;
+    padding: 0.5rem 0;
+  }
+  td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    display: inline-block;
+    width: 100px;
+  }
+}
+
+
   </style>
 </head>
 <body>
@@ -78,12 +107,12 @@
       top7.forEach((jogador, i) => {
         tabela += `
           <tr>
-            <td class="icone">${icones[i] || ""}</td>
-            <td>${jogador.apelido}</td>
-            <td>${jogador.fase}</td>
-            <td>${jogador.porcentagem.toFixed(1)}%</td>
-            <td>${jogador.tempo}s</td>
-            <td>${jogador.data}</td>
+            <td class="icone" data-label="Posição">${icones[i] || ""}</td>
+            <td data-label="Apelido">${jogador.apelido}</td>
+            <td data-label="Fase">${jogador.fase}</td>
+            <td data-label="% Acerto">${jogador.porcentagem.toFixed(1)}%</td>
+            <td data-label="Tempo">${jogador.tempo}s</td>
+            <td data-label="Data">${jogador.data}</td>
           </tr>
         `;
       });
