--- a/fase2.html
+++ b/fase2.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fase 2 - Jogo Musical</title>
+  <title>Fase 2 – Escalas e tons</title>
   <style>
     body {
       font-family: 'Comic Sans MS', cursive;
@@ -58,6 +57,7 @@
     let fase = "Fase 2 – Escalas e tons";
     let index = 0;
     let acertos = 0;
+    const inicio = performance.now(); // Inicia o cronômetro
 
     async function carregarPerguntas() {
       const res = await fetch('perguntas.json');
@@ -115,9 +115,23 @@
       const porcentagem = (acertos / total) * 100;
       const statusEl = document.getElementById('status');
       const quizEl = document.getElementById('quiz');
+      const tempo = Math.round((performance.now() - inicio) / 1000);
+      const data = new Date().toLocaleString();
+      const apelido = localStorage.getItem("apelido") || "Desconhecido";
       quizEl.classList.add('hidden');
+
       if (porcentagem >= 90) {
-        statusEl.innerHTML = `✅ Parabéns! Você acertou ${acertos}/${total} e passou de fase!<br>Carregando próxima fase...`;
+        // Salva progresso
+        const jogador = { apelido, fase: 3, porcentagem, tempo, data };
+        localStorage.setItem("jogador", JSON.stringify(jogador));
+
+        // Atualiza ranking
+        const ranking = JSON.parse(localStorage.getItem("rankingMSA") || "[]");
+        ranking.push(jogador);
+        localStorage.setItem("rankingMSA", JSON.stringify(ranking));
+
+        statusEl.innerHTML = `✅ Parabéns, ${apelido}! Você acertou ${acertos}/${total} e passou de fase!<br>Carregando próxima fase...`;
+
         setTimeout(() => {
           window.close();
           window.open('fase3.html', 'Fase3', 'width=800,height=600');
